<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Vocable Trainer</string>
    
    <string name="statistic">Statistic</string>
    <string name="right">right</string>
    <string name="wrong">wrong</string>
    <string name="todo">to do</string>
    
    <string name="dictionary1">Deutsch/English 1</string>
    <string name="language1">Deutsch</string>
    <string name="language2">English</string>
    <string name="next">&gt;</string>
    
    <string name="bla">abc</string>
    <string name="bla123">123</string>
    
    <string name="rightToast">Right.</string>
    <string name="wrongToast">!!! WRONG !!!</string>
    <string name="wrongToastDetails">Expected: %s</string>
    <string name="finishedToast">*** Complete ***</string>
    <string name="finishedToastDetails">Congratulation, you have successfully solved the training set.</string>
    
    <string name="language12">Deutsch ↔ English</string>
    <string name="count">count: %d</string>
    <string name="edit">edit</string>
    <string name="training">training</string>
    <string name="multipleChoice">MC</string>
    <string name="nodata">No dictionaries present</string>
    
    <string name="languageDirection12">Deutsch → Toki Pona</string>
    
    <string name="dictionaryNameLabel">dictionary name</string>
    <string name="language1Label">language 1</string>
    <string name="language2Label">language 2</string>
	<string name="addVocable">add vocable</string>
	<string name="deleteVocable">delete vocable</string>
    <string name="addDictionary">add dictionary</string>
	<string name="deleteDictionary">delete dictionary</string>
    <string name="savingDictionary">Saving dictionary.</string>
    <string name="deletingDictionary">Deleting dictionary.</string>
    <string name="confirmDeleteDictionaryTitle">Delete dictionary</string>
    <string name="confirmDeleteDictionaryText">You are deleting that dictionary. Are you sure?</string>
    
    <string name="openConfig">configuration</string>
    <string name="translationDirection">translation direction</string>
    <string name="translateForward">language 1 → language 2</string>
    <string name="translateBidrectional">language 1 ↔ language 2</string>
    <string name="translateBackward">language 1 ← language 2</string>
    <string name="resetDatabase">reset database</string>
    
    <string name="confirmResetDatabaseTitle">Reset database</string>
    <string name="confirmResetDatabaseText">You are recovering default dictionaries. Are you sure? Warning: all current dictionaries will be lost!</string>
    <string name="resettingDatabase">Resetting database.</string>

    <string name="exportToExternalStorage">export to external storage</string>
    <string name="importFromExternalStorage">import from external storage</string>
    
    <string name="errorExportingDictionary">Error exporting dictionary to external storage.</string>
    <string name="exportedDictionary">Exported dictionary to external storage file %s.</string>
    
    <string name="title_activity_import">Import from external storage</string>
    <string name="selectFileToImport">Select file to import:</string>
    <string name="deleteFile">delete file</string>
    <string name="file">DICT_123.vt</string>
    <string name="importingDictionary">Importing dictionary.</string>
    <string name="errorImportingDictionary">Error importing dictionary.</string>
    
    <string name="uploadToGoogleDrive">upload to Google Drive</string>
    <string name="downloadFromGoogleDrive">download from Google Drive</string>
    
    <string name="errorUploadingDictionary">Error uploading dictionary to Google Drive.</string>
    <string name="uploadedDictionary">Uploaded dictionary to Google Drive.</string>
    
    <string name="downloadingDictionary">Downloading dictionary.</string>
    <string name="errorDownloadingDictionary">Error downloading dictionary.</string>
    
    <string name="about">About Vocable Trainer</string>
    
    <string name="share">Share</string>
    
</resources>
