<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android1="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="20dp"
    android:orientation="vertical"
    tools:context="${relativePackage}.ConfigActivity" >

    <TextView
        android1:id="@+id/textView1"
        android1:layout_width="wrap_content"
        android1:layout_height="wrap_content"
        android1:text="@string/translationDirection" />

    <RadioGroup
        android1:id="@+id/radioGroupDirection"
        android1:layout_width="wrap_content"
        android1:layout_height="wrap_content"
        android:layout_margin="6dp" >

        <RadioButton
            android1:id="@+id/radioDirection1"
            android1:layout_width="wrap_content"
            android1:layout_height="wrap_content"
            android1:checked="true"
            android1:text="@string/translateForward" />

        <RadioButton
            android1:id="@+id/radioDirection2"
            android1:layout_width="wrap_content"
            android1:layout_height="wrap_content"
            android1:text="@string/translateBidrectional" />

        <RadioButton
            android1:id="@+id/radioDirection3"
            android1:layout_width="wrap_content"
            android1:layout_height="wrap_content"
            android1:text="@string/translateBackward" />
    </RadioGroup>

    <Button
        android1:id="@+id/buttonResetDatabase"
        android1:layout_width="wrap_content"
        android1:layout_height="wrap_content"
        android:layout_margin="12dp"
	    android:onClick="onClickResetDatabase"
        android1:text="@string/resetDatabase" />

</LinearLayout>